// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autocompleteTermSuggestions autocomplete within query for |(is:blue jun)| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Array [
      9,
      17,
    ],
    "query": "(is:blue tag:junk)",
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:bow is:void| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Array [
      7,
      14,
    ],
    "query": "is:bow is:void",
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:haspower is:b| with caret at position 16 1`] = `
Array [
  Object {
    "highlightRange": Array [
      12,
      19,
    ],
    "query": "is:haspower is:blue",
    "type": 3,
  },
  Object {
    "highlightRange": Array [
      12,
      18,
    ],
    "query": "is:haspower is:bow",
    "type": 3,
  },
]
`;

exports[`filterComplete autocomplete terms for |is:b| 1`] = `
Array [
  "is:blue",
  "is:bow",
]
`;

exports[`filterComplete autocomplete terms for |jun| 1`] = `
Array [
  "tag:junk",
]
`;

exports[`filterComplete autocomplete terms for |sni| 1`] = `
Array [
  "is:sniperrifle",
]
`;

exports[`filterComplete autocomplete terms for |stat:| 1`] = `
Array [
  "stat:",
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:inventorysize:",
  "stat:mobility:",
  "stat:recovery:",
  "stat:strength:",
  "stat:stability:",
  "stat:aimassist:",
  "stat:intellect:",
  "stat:equipspeed:",
  "stat:swingSpeed:",
  "stat:chargeRate:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:blastradius:",
  "stat:ammoCapacity:",
  "stat:inventorysize:",
  "stat:guardEndurance:",
  "stat:recoildirection:",
  "stat:guardEfficiency:",
  "stat:guardResistance:",
  "stat:rpm:<",
  "stat:rof:<",
  "stat:charge:<",
  "stat:impact:<",
  "stat:handling:<",
  "stat:range:<",
  "stat:stability:<",
  "stat:reload:<",
  "stat:magazine:<",
  "stat:aimassist:<",
  "stat:equipspeed:<",
  "stat:velocity:<",
  "stat:blastradius:<",
  "stat:recoildirection:<",
  "stat:drawtime:<",
  "stat:zoom:<",
  "stat:inventorysize:<",
  "stat:mobility:<",
  "stat:resilience:<",
  "stat:recovery:<",
  "stat:discipline:<",
  "stat:intellect:<",
  "stat:strength:<",
  "stat:total:<",
  "stat:custom:<",
  "stat:any:<",
  "stat:rpm:>",
  "stat:rof:>",
  "stat:charge:>",
  "stat:impact:>",
  "stat:handling:>",
  "stat:range:>",
  "stat:stability:>",
  "stat:reload:>",
  "stat:magazine:>",
  "stat:aimassist:>",
  "stat:equipspeed:>",
  "stat:velocity:>",
  "stat:blastradius:>",
  "stat:recoildirection:>",
  "stat:drawtime:>",
  "stat:zoom:>",
  "stat:inventorysize:>",
  "stat:mobility:>",
  "stat:resilience:>",
  "stat:recovery:>",
  "stat:discipline:>",
  "stat:intellect:>",
  "stat:strength:>",
  "stat:total:>",
  "stat:custom:>",
  "stat:any:>",
  "stat:rpm:<=",
  "stat:rof:<=",
  "stat:charge:<=",
  "stat:impact:<=",
  "stat:handling:<=",
  "stat:range:<=",
  "stat:stability:<=",
  "stat:reload:<=",
  "stat:magazine:<=",
  "stat:aimassist:<=",
  "stat:equipspeed:<=",
  "stat:velocity:<=",
  "stat:blastradius:<=",
  "stat:recoildirection:<=",
  "stat:drawtime:<=",
  "stat:zoom:<=",
  "stat:inventorysize:<=",
  "stat:mobility:<=",
  "stat:resilience:<=",
  "stat:recovery:<=",
  "stat:discipline:<=",
  "stat:intellect:<=",
  "stat:strength:<=",
  "stat:total:<=",
  "stat:custom:<=",
  "stat:any:<=",
  "stat:rpm:>=",
  "stat:rof:>=",
  "stat:charge:>=",
  "stat:impact:>=",
  "stat:handling:>=",
  "stat:range:>=",
  "stat:stability:>=",
  "stat:reload:>=",
  "stat:magazine:>=",
  "stat:aimassist:>=",
  "stat:equipspeed:>=",
  "stat:velocity:>=",
  "stat:blastradius:>=",
  "stat:recoildirection:>=",
  "stat:drawtime:>=",
  "stat:zoom:>=",
  "stat:inventorysize:>=",
  "stat:mobility:>=",
  "stat:recovery:>=",
  "stat:strength:>=",
  "stat:stability:=",
  "stat:aimassist:=",
  "stat:intellect:=",
  "stat:equipspeed:<",
  "stat:swingSpeed:<",
  "stat:chargeRate:<",
  "stat:resilience:<",
  "stat:discipline:<",
  "stat:equipspeed:>",
  "stat:swingSpeed:>",
  "stat:chargeRate:>",
  "stat:resilience:>",
  "stat:discipline:>",
  "stat:stability:<=",
  "stat:aimassist:<=",
  "stat:intellect:<=",
  "stat:stability:>=",
  "stat:aimassist:>=",
  "stat:intellect:>=",
  "stat:equipspeed:=",
  "stat:swingSpeed:=",
  "stat:chargeRate:=",
  "stat:resilience:=",
  "stat:discipline:=",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:equipspeed:<=",
  "stat:swingSpeed:<=",
  "stat:chargeRate:<=",
  "stat:resilience:<=",
  "stat:discipline:<=",
  "stat:equipspeed:>=",
  "stat:swingSpeed:>=",
  "stat:chargeRate:>=",
  "stat:resilience:>=",
  "stat:recovery:>=",
  "stat:discipline:>=",
  "stat:blastradius:=",
  "stat:ammoCapacity:<",
  "stat:ammoCapacity:>",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:ammoCapacity:=",
  "stat:inventorysize:<",
  "stat:inventorysize:>",
  "stat:ammoCapacity:<=",
  "stat:ammoCapacity:>=",
  "stat:inventorysize:=",
  "stat:guardEndurance:<",
  "stat:guardEndurance:>",
  "stat:inventorysize:<=",
  "stat:inventorysize:>=",
  "stat:guardEndurance:=",
  "stat:recoildirection:<",
  "stat:guardEfficiency:<",
  "stat:guardResistance:<",
  "stat:recoildirection:>",
  "stat:guardEfficiency:>",
  "stat:guardResistance:>",
  "stat:guardEndurance:<=",
  "stat:guardEndurance:>=",
  "stat:recoildirection:=",
  "stat:guardEfficiency:=",
  "stat:guardResistance:=",
  "stat:recoildirection:<=",
  "stat:guardEfficiency:<=",
  "stat:guardResistance:<=",
  "stat:recoildirection:>=",
  "stat:guardEfficiency:>=",
  "stat:guardResistance:>=",
]
`;

exports[`filterComplete autocomplete terms for |stat:mob| 1`] = `
Array [
  "stat:mobility:",
]
`;

exports[`filterComplete autocomplete terms for |stat| 1`] = `
Array [
  "stat:",
  "basestat:",
  "maxstatloadout:",
  "maxstatvalue:",
  "maxbasestatvalue:",
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:inventorysize:",
  "stat:mobility:",
  "stat:recovery:",
  "stat:strength:",
  "stat:stability:",
  "stat:aimassist:",
  "stat:intellect:",
  "stat:equipspeed:",
  "stat:swingSpeed:",
  "stat:chargeRate:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:blastradius:",
  "stat:ammoCapacity:",
  "stat:inventorysize:",
  "stat:guardEndurance:",
  "stat:recoildirection:",
  "stat:guardEfficiency:",
  "stat:guardResistance:",
  "basestat:any:",
  "basestat:total:",
  "basestat:custom:",
  "basestat:mobility:",
  "basestat:resilience:",
  "basestat:recovery:",
  "basestat:discipline:",
  "basestat:intellect:",
  "basestat:strength:",
  "basestat:total:",
  "basestat:custom:",
  "basestat:any:",
  "maxstatloadout:mobility",
  "maxstatloadout:resilience",
  "maxstatloadout:recovery",
  "maxstatloadout:discipline",
  "maxstatloadout:intellect",
  "maxstatloadout:strength",
  "maxstatloadout:total",
  "maxstatloadout:custom",
  "maxstatloadout:any",
  "maxstatvalue:mobility",
  "maxstatvalue:resilience",
  "maxstatvalue:recovery",
  "maxstatvalue:discipline",
  "maxstatvalue:intellect",
  "maxstatvalue:strength",
  "maxstatvalue:total",
  "maxstatvalue:custom",
  "maxstatvalue:any",
  "maxbasestatvalue:mobility",
  "maxbasestatvalue:resilience",
  "maxbasestatvalue:recovery",
  "maxbasestatvalue:discipline",
  "maxstatloadout:intellect",
  "maxstatloadout:resilience",
  "maxstatloadout:discipline",
  "stat:rpm:<",
  "stat:rof:<",
  "stat:any:<",
  "stat:rpm:>",
  "stat:rof:>",
  "stat:any:>",
  "stat:rpm:=",
  "stat:rof:=",
  "stat:any:=",
  "stat:zoom:<",
  "stat:zoom:>",
  "stat:rpm:<=",
  "stat:rof:<=",
  "stat:any:<=",
  "stat:rpm:>=",
  "stat:rof:>=",
  "stat:any:>=",
  "stat:zoom:=",
  "stat:range:<",
  "stat:total:<",
  "stat:range:>",
  "stat:total:>",
  "stat:zoom:<=",
  "stat:zoom:>=",
  "stat:range:=",
  "stat:total:=",
  "stat:charge:<",
  "stat:impact:<",
  "stat:reload:<",
  "stat:custom:<",
  "stat:charge:>",
  "stat:impact:>",
  "stat:reload:>",
  "stat:custom:>",
  "stat:range:<=",
  "stat:total:<=",
  "stat:range:>=",
  "stat:total:>=",
  "stat:charge:=",
  "stat:impact:=",
  "stat:reload:=",
  "stat:custom:=",
  "stat:charge:<=",
  "stat:impact:<=",
  "stat:reload:<=",
  "stat:custom:<=",
  "stat:charge:>=",
  "stat:impact:>=",
  "stat:reload:>=",
  "stat:custom:>=",
  "stat:handling:<",
  "stat:magazine:<",
  "stat:velocity:<",
  "stat:drawtime:<",
  "stat:mobility:<",
  "stat:recovery:<",
  "stat:strength:<",
  "stat:handling:>",
  "stat:magazine:>",
  "stat:velocity:>",
  "stat:drawtime:>",
  "stat:mobility:>",
  "stat:recovery:>",
  "stat:strength:>",
  "stat:handling:=",
  "stat:magazine:=",
  "stat:velocity:=",
  "stat:drawtime:=",
  "stat:mobility:=",
  "stat:recovery:=",
  "stat:strength:=",
  "stat:stability:<",
  "stat:aimassist:<",
  "stat:intellect:<",
  "stat:stability:>",
  "stat:aimassist:>",
  "stat:intellect:>",
  "stat:handling:<=",
  "stat:magazine:<=",
  "stat:velocity:<=",
  "stat:drawtime:<=",
  "stat:mobility:<=",
  "stat:recovery:<=",
  "stat:strength:<=",
  "stat:handling:>=",
  "stat:magazine:>=",
  "stat:velocity:>=",
  "stat:drawtime:>=",
  "stat:mobility:>=",
  "stat:recovery:>=",
  "stat:strength:>=",
  "stat:stability:=",
  "stat:aimassist:=",
  "stat:intellect:=",
  "stat:equipspeed:<",
  "stat:swingSpeed:<",
  "stat:chargeRate:<",
  "stat:resilience:<",
  "stat:discipline:<",
  "stat:equipspeed:>",
  "stat:swingSpeed:>",
  "stat:chargeRate:>",
  "stat:resilience:>",
  "stat:discipline:>",
  "stat:stability:<=",
  "stat:aimassist:<=",
  "stat:intellect:<=",
  "stat:stability:>=",
  "stat:aimassist:>=",
  "stat:intellect:>=",
  "stat:equipspeed:=",
  "stat:swingSpeed:=",
  "stat:chargeRate:=",
  "stat:resilience:=",
  "stat:discipline:=",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:equipspeed:<=",
  "stat:swingSpeed:<=",
  "stat:chargeRate:<=",
  "stat:resilience:<=",
  "stat:discipline:<=",
  "stat:equipspeed:>=",
  "stat:swingSpeed:>=",
  "stat:chargeRate:>=",
  "stat:resilience:>=",
  "stat:discipline:>=",
  "stat:blastradius:=",
  "stat:ammoCapacity:<",
  "stat:ammoCapacity:>",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:ammoCapacity:=",
  "stat:inventorysize:<",
  "stat:inventorysize:>",
  "stat:ammoCapacity:<=",
  "stat:ammoCapacity:>=",
  "stat:inventorysize:=",
  "stat:guardEndurance:<",
  "stat:guardEndurance:>",
  "stat:inventorysize:<=",
  "stat:inventorysize:>=",
  "stat:guardEndurance:=",
  "stat:recoildirection:<",
  "stat:guardEfficiency:<",
  "stat:guardResistance:<",
  "stat:recoildirection:>",
  "stat:guardEfficiency:>",
  "stat:guardResistance:>",
  "stat:guardEndurance:<=",
  "stat:guardEndurance:>=",
  "stat:recoildirection:=",
  "stat:guardEfficiency:=",
  "stat:guardResistance:=",
  "stat:recoildirection:<=",
  "stat:guardEfficiency:<=",
  "stat:guardResistance:<=",
  "stat:recoildirection:>=",
  "stat:guardEfficiency:>=",
  "stat:guardResistance:>=",
  "basestat:any:<",
  "basestat:any:>",
  "basestat:any:=",
  "basestat:any:<=",
  "basestat:any:>=",
  "basestat:total:<",
  "basestat:total:>",
  "basestat:total:=",
  "basestat:custom:<",
  "basestat:custom:>",
  "basestat:total:<=",
  "basestat:total:>=",
  "basestat:custom:=",
  "basestat:custom:<=",
  "basestat:custom:>=",
  "basestat:mobility:<",
  "basestat:recovery:<",
  "basestat:strength:<",
  "basestat:mobility:>",
  "basestat:recovery:>",
  "basestat:strength:>",
  "basestat:mobility:=",
  "basestat:recovery:=",
  "basestat:strength:=",
  "basestat:intellect:<",
  "basestat:intellect:>",
  "basestat:mobility:<=",
  "basestat:recovery:<=",
  "basestat:strength:<=",
  "basestat:mobility:>=",
  "basestat:recovery:>=",
  "basestat:strength:>=",
  "basestat:intellect:=",
  "basestat:resilience:<",
  "basestat:discipline:<",
  "basestat:resilience:>",
  "basestat:discipline:>",
  "basestat:intellect:<=",
  "basestat:intellect:>=",
  "basestat:resilience:=",
  "basestat:discipline:=",
  "basestat:resilience:<=",
  "basestat:discipline:<=",
  "basestat:resilience:>=",
  "basestat:discipline:>=",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query || 1`] = `
Array [
  "recent saved",
  "yearold saved",
  "0 days old, 9 uses",
  "0 days old, 8 uses",
  "dayold highuse",
  "0 days old, 7 uses",
  "1 days old, 9 uses",
  "1 days old, 8 uses",
  "0 days old, 6 uses",
  "1 days old, 7 uses",
  "2 days old, 9 uses",
  "2 days old, 8 uses",
  "1 days old, 6 uses",
  "2 days old, 7 uses",
  "3 days old, 9 uses",
  "0 days old, 5 uses",
  "3 days old, 8 uses",
  "2 days old, 6 uses",
  "3 days old, 7 uses",
  "4 days old, 9 uses",
  "1 days old, 5 uses",
  "4 days old, 8 uses",
  "3 days old, 6 uses",
  "4 days old, 7 uses",
  "5 days old, 9 uses",
  "2 days old, 5 uses",
  "5 days old, 8 uses",
  "4 days old, 6 uses",
  "0 days old, 4 uses",
  "5 days old, 7 uses",
  "6 days old, 9 uses",
  "3 days old, 5 uses",
  "6 days old, 8 uses",
  "5 days old, 6 uses",
  "1 days old, 4 uses",
  "6 days old, 7 uses",
  "7 days old, 9 uses",
  "4 days old, 5 uses",
  "7 days old, 8 uses",
  "6 days old, 6 uses",
  "2 days old, 4 uses",
  "7 days old, 7 uses",
  "8 days old, 9 uses",
  "5 days old, 5 uses",
  "8 days old, 8 uses",
  "7 days old, 6 uses",
  "3 days old, 4 uses",
  "8 days old, 7 uses",
  "9 days old, 9 uses",
  "6 days old, 5 uses",
  "9 days old, 8 uses",
  "8 days old, 6 uses",
  "4 days old, 4 uses",
  "9 days old, 7 uses",
  "10 days old, 9 uses",
  "0 days old, 3 uses",
  "7 days old, 5 uses",
  "10 days old, 8 uses",
  "9 days old, 6 uses",
  "5 days old, 4 uses",
  "10 days old, 7 uses",
  "11 days old, 9 uses",
  "1 days old, 3 uses",
  "8 days old, 5 uses",
  "11 days old, 8 uses",
  "10 days old, 6 uses",
  "6 days old, 4 uses",
  "11 days old, 7 uses",
  "12 days old, 9 uses",
  "2 days old, 3 uses",
  "9 days old, 5 uses",
  "12 days old, 8 uses",
  "11 days old, 6 uses",
  "7 days old, 4 uses",
  "12 days old, 7 uses",
  "13 days old, 9 uses",
  "3 days old, 3 uses",
  "10 days old, 5 uses",
  "13 days old, 8 uses",
  "12 days old, 6 uses",
  "8 days old, 4 uses",
  "13 days old, 7 uses",
  "14 days old, 9 uses",
  "4 days old, 3 uses",
  "11 days old, 5 uses",
  "14 days old, 8 uses",
  "13 days old, 6 uses",
  "9 days old, 4 uses",
  "14 days old, 7 uses",
  "15 days old, 9 uses",
  "5 days old, 3 uses",
  "12 days old, 5 uses",
  "15 days old, 8 uses",
  "14 days old, 6 uses",
  "10 days old, 4 uses",
  "15 days old, 7 uses",
  "16 days old, 9 uses",
  "6 days old, 3 uses",
  "13 days old, 5 uses",
  "16 days old, 8 uses",
  "15 days old, 6 uses",
  "11 days old, 4 uses",
  "16 days old, 7 uses",
  "17 days old, 9 uses",
  "7 days old, 3 uses",
  "14 days old, 5 uses",
  "17 days old, 8 uses",
  "0 days old, 2 uses",
  "16 days old, 6 uses",
  "12 days old, 4 uses",
  "17 days old, 7 uses",
  "18 days old, 9 uses",
  "8 days old, 3 uses",
  "15 days old, 5 uses",
  "18 days old, 8 uses",
  "1 days old, 2 uses",
  "17 days old, 6 uses",
  "13 days old, 4 uses",
  "18 days old, 7 uses",
  "19 days old, 9 uses",
  "9 days old, 3 uses",
  "16 days old, 5 uses",
  "19 days old, 8 uses",
  "2 days old, 2 uses",
  "18 days old, 6 uses",
  "14 days old, 4 uses",
  "19 days old, 7 uses",
  "20 days old, 9 uses",
  "10 days old, 3 uses",
  "17 days old, 5 uses",
  "20 days old, 8 uses",
  "3 days old, 2 uses",
  "19 days old, 6 uses",
  "15 days old, 4 uses",
  "20 days old, 7 uses",
  "21 days old, 9 uses",
  "11 days old, 3 uses",
  "18 days old, 5 uses",
  "21 days old, 8 uses",
  "4 days old, 2 uses",
  "20 days old, 6 uses",
  "16 days old, 4 uses",
  "21 days old, 7 uses",
  "22 days old, 9 uses",
  "12 days old, 3 uses",
  "19 days old, 5 uses",
  "22 days old, 8 uses",
  "5 days old, 2 uses",
  "21 days old, 6 uses",
  "17 days old, 4 uses",
  "22 days old, 7 uses",
  "23 days old, 9 uses",
  "13 days old, 3 uses",
  "20 days old, 5 uses",
  "23 days old, 8 uses",
  "6 days old, 2 uses",
  "22 days old, 6 uses",
  "18 days old, 4 uses",
  "23 days old, 7 uses",
  "24 days old, 9 uses",
  "14 days old, 3 uses",
  "21 days old, 5 uses",
  "24 days old, 8 uses",
  "7 days old, 2 uses",
  "23 days old, 6 uses",
  "19 days old, 4 uses",
  "24 days old, 7 uses",
  "25 days old, 9 uses",
  "15 days old, 3 uses",
  "22 days old, 5 uses",
  "25 days old, 8 uses",
  "8 days old, 2 uses",
  "24 days old, 6 uses",
  "20 days old, 4 uses",
  "25 days old, 7 uses",
  "26 days old, 9 uses",
  "16 days old, 3 uses",
  "23 days old, 5 uses",
  "26 days old, 8 uses",
  "9 days old, 2 uses",
  "25 days old, 6 uses",
  "21 days old, 4 uses",
  "26 days old, 7 uses",
  "27 days old, 9 uses",
  "17 days old, 3 uses",
  "24 days old, 5 uses",
  "27 days old, 8 uses",
  "10 days old, 2 uses",
  "26 days old, 6 uses",
  "22 days old, 4 uses",
  "27 days old, 7 uses",
  "28 days old, 9 uses",
  "18 days old, 3 uses",
  "25 days old, 5 uses",
  "28 days old, 8 uses",
  "11 days old, 2 uses",
  "27 days old, 6 uses",
  "23 days old, 4 uses",
  "28 days old, 7 uses",
  "29 days old, 9 uses",
  "19 days old, 3 uses",
  "26 days old, 5 uses",
  "29 days old, 8 uses",
  "12 days old, 2 uses",
  "28 days old, 6 uses",
  "24 days old, 4 uses",
  "29 days old, 7 uses",
  "20 days old, 3 uses",
  "27 days old, 5 uses",
  "13 days old, 2 uses",
  "29 days old, 6 uses",
  "25 days old, 4 uses",
  "21 days old, 3 uses",
  "28 days old, 5 uses",
  "14 days old, 2 uses",
  "26 days old, 4 uses",
  "22 days old, 3 uses",
  "29 days old, 5 uses",
  "15 days old, 2 uses",
  "27 days old, 4 uses",
  "0 days old, 1 uses",
  "23 days old, 3 uses",
  "16 days old, 2 uses",
  "28 days old, 4 uses",
  "1 days old, 1 uses",
  "24 days old, 3 uses",
  "17 days old, 2 uses",
  "29 days old, 4 uses",
  "2 days old, 1 uses",
  "25 days old, 3 uses",
  "18 days old, 2 uses",
  "3 days old, 1 uses",
  "26 days old, 3 uses",
  "19 days old, 2 uses",
  "4 days old, 1 uses",
  "27 days old, 3 uses",
  "20 days old, 2 uses",
  "5 days old, 1 uses",
  "28 days old, 3 uses",
  "21 days old, 2 uses",
  "6 days old, 1 uses",
  "29 days old, 3 uses",
  "22 days old, 2 uses",
  "7 days old, 1 uses",
  "23 days old, 2 uses",
  "8 days old, 1 uses",
  "24 days old, 2 uses",
  "9 days old, 1 uses",
  "25 days old, 2 uses",
  "10 days old, 1 uses",
  "26 days old, 2 uses",
  "11 days old, 1 uses",
  "27 days old, 2 uses",
  "12 days old, 1 uses",
  "28 days old, 2 uses",
  "13 days old, 1 uses",
  "29 days old, 2 uses",
  "14 days old, 1 uses",
  "15 days old, 1 uses",
  "16 days old, 1 uses",
  "17 days old, 1 uses",
  "18 days old, 1 uses",
  "19 days old, 1 uses",
  "20 days old, 1 uses",
  "21 days old, 1 uses",
  "22 days old, 1 uses",
  "23 days old, 1 uses",
  "24 days old, 1 uses",
  "25 days old, 1 uses",
  "26 days old, 1 uses",
  "27 days old, 1 uses",
  "28 days old, 1 uses",
  "29 days old, 1 uses",
  "yearold highuse",
  "yearold unsaved",
  "dim api autosuggest",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query |high| 1`] = `
Array [
  "dayold highuse",
  "yearold highuse",
]
`;
